[metadata]
name = firewall-bot
version = attr: firewall-bot.version
description = A firewall chatbot
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
keywords = deltabot, plugin, firewall
license = MPL
classifiers =
            Development Status :: 3 - Alpha
            Environment :: Plugins
            Programming Language :: Python :: 3
            License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
            Operating System :: OS Independent
            Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  deltabot

[options.entry_points]
deltabot.plugins =
  firewall-bot = firewall-bot

[options.package_data]
* = *.txt, *.rst
